--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,8 @@ script:
   - sudo ln -s /usr/bin/gcc-4.9 /usr/local/bin/gcc
   - sudo ln -s /usr/bin/g++-4.9 /usr/local/bin/g++
 
+  - export CC=/usr/local/bin/gcc
+  - export CXX=/usr/local/bin/g++
+
   - gcc -v
   - g++ -v
