try only r language

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 dist: trusty
 sudo: required
 os: osx
-language: 
-  - cpp
-  - r: release
-
-r_packages: RTest
+language: r
 
 script:
   - Rscript
