--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
-dist: trusty
-sudo: required
-language: cpp
-compiler: gcc
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-4.9
-      - g++-4.9
+language: python
+
+before_install:
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda3/bin:$PATH
+  - conda update --yes conda
+  - conda info -a
+
+install:
+  - conda create -n test-env python=3.6
+  - conda install -n test-env nose flake8
+  - conda activate test-env
+  - pip install -e .
 
 script:
-  - sudo ln -s /usr/bin/gcc-4.9 /usr/local/bin/gcc
-  - sudo ln -s /usr/bin/g++-4.9 /usr/local/bin/g++
-
-  - gcc -v && g++ -v
+  - source activate test-env
+  - nosetest -v travis_demo --with-coverage --cover-package=travis_demo
+  - flake8 travis_demo setup.py
