--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ before_install:
   - conda info -a
 
 install:
-  - conda create -n test-env --file ci/travis_demo.yml
+  - conda env create -n test-env --file ci/travis_demo.yml
   - conda install -n test-env nose flake8
-  - conda activate test-env
+  - source activate test-env
   - pip install -e .
 
 script:
