--- a/ci/travis_demo.yml
+++ b/ci/travis_demo.yml
@@ -1,14 +1,6 @@
 channels:
-  - conda-forge
-  - bioconda
   - defaults
 dependencies:
   - python=3.6
-  - matplotlib=3.1
-  - scikit-learn=0.21
-  - snakemake=5.5
-  - numpy=1.17
-  - pandas=0.25
-  - seaborn=0.9
-  - scipy=1.3
+  - numpy>=1.17.1
 
