--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 
 install:
   - conda env create -n test-env --file ci/travis_demo.yml
-  - conda install -n test-env nose flake8
+  - conda install --yes -n test-env nose flake8
   - source activate test-env
   - pip install -e .
 
